integração flask e login

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,19 +11,19 @@
   <section class="register-login-container">
        <h1>Login</h1>
        <div>
-        <form action="" method="post">
+        <form action="login-form" method="POST">
             <ul>
                <li>
                  <p>Email:</p>
-                 <input type="email" name="" id="" placeholder="Escreva seu email">
+                 <input type="email" name="log-email" id="" placeholder="Escreva seu email">
                </li>
                <li>
                  <p>Password:</p>
-                 <input type="password" name="" id="" placeholder="Escreva seu password">
+                 <input type="password" name="log-password" id="" placeholder="Escreva seu password">
                </li>    
             </ul>
+            <button type="submit">Login</button>
         </form>
-        <button>Login</button>
        </div>
    </section>
 </body>
