--- a/templates/register.html
+++ b/templates/register.html
@@ -11,31 +11,31 @@
     <section class="register-login-container">
         <h1>Registro</h1>
         <div>
-            <form action="" method="post">
+            <form method="POST" action="/register-form">
                 <ul>
                     <li>
                         <p>Nome:</p>
-                        <input type="text" name="" id="" placeholder="Escreva seu nome">
+                        <input type="text" name="reg-name" id="" placeholder="Escreva seu nome">
                     </li>
                     <li>
                         <p>Email:</p>
-                        <input type="email" name="" id="" placeholder="Escreva seu email">
+                        <input type="email" name="reg-email" id="" placeholder="Escreva seu email">
                     </li>
                     <li>
                         <p>Password:</p>
-                        <input type="password" name="" id="" placeholder="Escreva seu password">
+                        <input type="password" name="reg-password" id="" placeholder="Escreva seu password">
                     </li>
                     <li>
                         <p>CPF:</p>
-                        <input type="text" name="cpf" id="" placeholder="Escreva seu cpf">
+                        <input type="text" name="reg-cpf" id="" placeholder="Escreva seu cpf">
                     </li>
-                    <select name="" id="" class="select-container">
+                    <!-- <select name="" id="" class="select-container">
                         <option value="Vendedor">Vendedor</option>
                         <option value="Cliente">Cliente</option>
-                    </select>    
+                    </select>     -->
+                    <button type="submit">Enviar</button>
                 </ul>
             </form>
-            <button>XSQDL</button>
         </div>
     </section>
 </body>
