implementação de models do db

--- a/templates/register.html
+++ b/templates/register.html
@@ -22,17 +22,17 @@
                         <input type="email" name="reg-email" id="" placeholder="Escreva seu email">
                     </li>
                     <li>
-                        <p>Password:</p>
-                        <input type="password" name="reg-password" id="" placeholder="Escreva seu password">
+                        <p>Senha:</p>
+                        <input type="password" name="reg-password" id="" placeholder="Escreva sua senha">
+                    </li>
+                    <li>
+                        <p>Confirme ua Senha:</p>
+                        <input type="password" name="reg-password-confirm" id="" placeholder="Confirme sua senha">
                     </li>
                     <li>
                         <p>CPF:</p>
                         <input type="text" name="reg-cpf" id="" placeholder="Escreva seu cpf">
                     </li>
-                    <!-- <select name="" id="" class="select-container">
-                        <option value="Vendedor">Vendedor</option>
-                        <option value="Cliente">Cliente</option>
-                    </select>     -->
                     <button type="submit">Enviar</button>
                 </ul>
             </form>
