--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <h1 class="logo">LOGO</h1>
-  <section class="register-login-container">
-       <h1>Login</h1>
-       <div>
+  <main class="wrapper">
+    <section class="register-login-container">
+      <h1>Login</h1>
+      <div>
         <form action="" method="POST">
           {{form.hidden_tag()}}
             <ul>
-               <li>
+              <li>
                 <p>{{form.email.label}}</p>
                 {{form.email(placeholder = "Escreva seu email")}}
                 {% if form.email.errors %}
@@ -24,23 +25,24 @@
                        {% endfor %}
                    </ul>
                  {% endif %}
-               </li>
-               <li>
+              </li>
+              <li>
                 <p>{{form.password.label}}</p>
                 {{form.password(placeholder = "Escreva seu email")}}
                 {% if form.password.errors %}
-                   <ul class = "errors">
-                       {% for errors in form.password.errors %}
-                           <li style="color: red;">{{error}}</li>
-                       {% endfor %}
-                   </ul>
+                  <ul class = "errors">
+                    {% for errors in form.password.errors %}
+                      <li style="color: red;">{{error}}</li>
+                    {% endfor %}
+                  </ul>
                  {% endif %}
-               </li>
+              </li>
             </ul>
             {{form.submit(class="btn-style")}}
         </form>
-       </div>
-   </section>
+      </div>
+     </section>
+  </main>
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         <ul class="flashes">
