--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -12,7 +12,11 @@
 }
 
 body{
+
     background-color: #f8f8f8;    
+}
+
+.wrapper{
     display: flex;
     height: 100vh;
     align-items: center;
